<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.deezy.newsapp.MainActivity"
    android:gravity="center_horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select"/>

    <RadioGroup
        android:id="@+id/RBG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="16dp"
        android:checkedButton="@+id/RB1">

        <RadioButton
            android:id="@id/RB1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/techradar" />

        <RadioButton
            android:id="@+id/RB2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/techcrunch" />

        <RadioButton
            android:id="@+id/RB3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ign"
            />
        <RadioButton
            android:id="@+id/RB4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recode" />
        <RadioButton
            android:id="@+id/RB5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hackernews"/>


    </RadioGroup>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="searchFunc"
        android:text="@string/go" />



</LinearLayout>



